After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 631487 - Fix drawing of <arc> theme elements
Fix drawing of <arc> theme elements
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-06 02:46 UTC by Nickolas Lloyd
Modified: 2010-10-11 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix drawing of <arc> theme elements (1.03 KB, patch)
2010-10-06 02:46 UTC, Nickolas Lloyd
committed Details | Review

Description Nickolas Lloyd 2010-10-06 02:46:06 UTC
Created attachment 171803 [details] [review]
Fix drawing of <arc> theme elements

Currently <arc>'s aren't drawn correctly in mutter, unless I misunderstand <arc>'s attributes.  As it is now, mutter draws <arc>'s 45 degrees clockwise of how they should be oriented.  This patch fixes that.